Use secure connection to minio by default
